# hunt_job_with_DB

./: .coverage  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_api_hunter_py.html  z_145eef247bfb46b6_base_api_hunter_py.html  z_145eef247bfb46b6_db_creator_py.html  z_145eef247bfb46b6_db_manager_py.html  z_145eef247bfb46b6_employers_api_py.html  z_145eef247bfb46b6_postgres_db_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_vacancies_api_py.html
src/: api_hunter.py  base_api_hunter.py  db_creator.py  db_manager.py  employers_api.py  postgres_db.py  utils.py  vacancies_api.py
tests/: conftest.py  test_db_creator.py  test_db_manager.py  test_employers_api.py  test_postgres_db.py  test_utils.py  test_vacancies_api.py
