[project]
name = "pythonproject15"
version = "0.1.0"
description = ""
authors = [
    {name = "Lilith",email = "bichakhchyanlilith1992@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "env (>=0.1.0,<0.2.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.git
  )/
)
'''

[tool.isort]
line_length = 119
force_single_line = true

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'